# devcontainer-base

./: .devcontainer-configurator.json  .gitignore  AGENTS.md  AGENTS.nextjs.md  AGENTS.python.md  Dockerfile  README.md  configure-devcontainer.py  devcontainer.json  init-firewall.sh  pyproject.toml
.devcontainer/: README.md  devcontainer.json  init-firewall.sh
src/devcontainer_configurator/: __init__.py  cli.py
